--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Rusted | Bitcoin for cash</title>
 
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
@@ -34,28 +34,36 @@
 
            <div class="masthead clearfix">
              <div class="inner">
-               <h3 class="masthead-brand">Cover</h3>
+               <h3 class="masthead-brand">Rusted</h3>
                <nav>
                  <ul class="nav masthead-nav">
                    <li class="active"><a href="#">Home</a></li>
-                   <li><a href="#">Features</a></li>
-                   <li><a href="#">Contact</a></li>
                  </ul>
                </nav>
              </div>
            </div>
 
            <div class="inner cover">
-             <h1 class="cover-heading">Cover your page.</h1>
-             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-             <p class="lead">
-               <a href="#" class="btn btn-lg btn-default">Learn more</a>
+             <h1 class="cover-heading">Bitcoin meets Cash</h1>
+             <p>
+               <a href="#" class="btn btn-sm btn-default">Buy</a>
+               <input value="first" style="width:80px" type="text"/>
+               bitcoin for
+               $ <input value="second" style="width:80px" type="text"/></p>
+             <p>
+             <p>
+               <a href="#" class="btn btn-sm btn-default">Sell</a>
+               <input value="first" style="width:80px" type="text"/>
+               bitcoin for
+               $ <input value="second" style="width:80px" type="text"/></p>
+             <p>
+             <p class="lead">Place your order, and come by the same day. <br>
              </p>
            </div>
 
            <div class="mastfoot">
              <div class="inner">
-               <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+               <p>A collaborative project by <a href="//magicinbits.com">Magic in Bits</a> and <a href="http://payload.tech">Payload</a>.</p>
              </div>
            </div>
 
